--- a/GtestSuite/en.lproj/GtestSuiteViewController.xib
+++ b/GtestSuite/en.lproj/GtestSuiteViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment version="1296" defaultVersion="1296" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
@@ -10,6 +10,7 @@
                 <outlet property="_endLabel" destination="3Zb-wN-EOK" id="POz-Td-k5D"/>
                 <outlet property="_executionLabel" destination="NZu-Vk-qLV" id="ZyG-mz-mWA"/>
                 <outlet property="_startLabel" destination="26h-r3-mSm" id="WQl-Zj-sdE"/>
+                <outlet property="_textView" destination="HG4-cg-20t" id="PGH-HJ-2c7"/>
                 <outlet property="_title" destination="39" id="siO-cU-6DI"/>
                 <outlet property="_titleLabel" destination="39" id="PaH-Er-1PX"/>
                 <outlet property="view" destination="6" id="7"/>
@@ -66,6 +67,13 @@
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" editable="NO" selectable="NO" id="HG4-cg-20t">
+                    <rect key="frame" x="20" y="147" width="326" height="381.00000006443747"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
             </subviews>
             <color key="backgroundColor" red="1" green="0.93192123289999995" blue="0.69433534809999997" alpha="1" colorSpace="calibratedRGB"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
