--- a/GtestSuite/en.lproj/GtestSuiteViewController.xib
+++ b/GtestSuite/en.lproj/GtestSuiteViewController.xib
@@ -7,12 +7,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GtestSuiteViewController">
             <connections>
+                <outlet property="_completionMessage" destination="bGu-2Q-FJz" id="LD5-hm-iBV"/>
                 <outlet property="_executionLabel" destination="NZu-Vk-qLV" id="ZyG-mz-mWA"/>
                 <outlet property="_startLabel" destination="26h-r3-mSm" id="WQl-Zj-sdE"/>
                 <outlet property="_textView" destination="HG4-cg-20t" id="PGH-HJ-2c7"/>
                 <outlet property="_title" destination="39" id="siO-cU-6DI"/>
                 <outlet property="_titleLabel" destination="39" id="PaH-Er-1PX"/>
-                <outlet property="view" destination="6" id="7"/>
+                <outlet property="view" destination="6" id="6rQ-pZ-mKL"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -34,7 +35,7 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Run:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4ez-Cm-ddT">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4ez-Cm-ddT">
                     <rect key="frame" x="20" y="89" width="48" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -48,18 +49,24 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="26h-r3-mSm">
-                    <rect key="frame" x="76" y="60" width="270" height="21"/>
+                    <rect key="frame" x="71" y="60" width="275" height="21"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" editable="NO" selectable="NO" id="HG4-cg-20t">
-                    <rect key="frame" x="20" y="118" width="326" height="410.00000006443747"/>
+                    <rect key="frame" x="20" y="156" width="326" height="372.00000006443747"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="bGu-2Q-FJz">
+                    <rect key="frame" x="20" y="118" width="326" height="30"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
             </subviews>
             <color key="backgroundColor" red="1" green="0.93192123289999995" blue="0.69433534809999997" alpha="1" colorSpace="calibratedRGB"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
